--- a/tab/app.css
+++ b/tab/app.css
@@ -47,11 +47,21 @@ html {
     transform-origin: center; /* Scale from center */
 }
 
+.bird-title-container {
+    display: block;
+    width: fit-content;
+    margin: 0 auto;
+    padding: 10px 20px;
+    background: rgba(251, 241, 234, 0.6); /* or rgba(0,0,0,0.3) for dark */
+    backdrop-filter: blur(4px); /* Optional: blur background behind text */
+    border-radius: 12px;
+}
+
 .bird-title {
-    font-size: 4rem; /* Duży rozmiar czcionki */
+    font-size: 3rem; /* Duży rozmiar czcionki */
     font-weight: bold; /* Pogrubienie tekstu */
     color: transparent; /* Tekst jest przezroczysty */
-    background-image: linear-gradient(90deg, #EF9C66, #78ABA8, #FFCCEA); /* Gradient zamiast obrazu */
+    background-image: linear-gradient(90deg, #EF9C66, #78ABA8, #F7A4A4); /* Gradient zamiast obrazu */
     background-size: 200%; /* Powiększone tło dla płynnej animacji */
     background-position: 0 50%;
     background-clip: text;
@@ -59,8 +69,9 @@ html {
     -webkit-text-fill-color: transparent; /* Wsparcie dla WebKit */
     animation: animate-background 5s infinite alternate linear; /* Animacja tła */
     text-align: center; /* Wyśrodkowanie tekstu */
-    margin: 50px 0; /* Odstępy nad i pod tytułem */
-    filter: drop-shadow(4px 4px 2px rgba(255, 255, 255, 1)); /* Subtelny cień elementu */
+    margin: 5px 5px; /* Odstępy nad i pod tytułem */
+    filter: drop-shadow(0px 0px 8px rgba(255, 255, 255, 0.5));
+    filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.6));
 }
 
 /* Animacja przesuwania tła */
